wier/force-app/main/default/objects/Abu_Dhabi_Contract_Checklist__c/Abu_Dhabi_Contract_Checklist__c.object-meta.xml
<CustomObject>
    <label>Abu Dhabi Contract Checklist</label>
    <nameField>
        <label>Abu Dhabi Contract Checklist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Abu Dhabi Contract Checklists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>