wier/force-app/main/default/objects/Abu_Dhabi_Contract_Checklist__c/fields/Assignee_Comments__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Comments__c</fullName>
    <label>Contract Rep&apos;s Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>