wier/force-app/main/default/objects/Abu_Dhabi_Contract_Checklist__c/fields/Contract_Reps_email__c.field-meta.xml
<CustomField>
    <fullName>Contract_Reps_email__c</fullName>
    <label>Contract Reps email</label>
    <type>Email</type>
</CustomField>