wier/force-app/main/default/objects/Abu_Dhabi_Contract_Checklist__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <formula>Opportunity__r.Assign_Tendering_Representative__r.Email</formula>
    <label>Email</label>
    <type>Text</type>
</CustomField>