wier/force-app/main/default/objects/Abu_Dhabi_Contract_Checklist__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>COpportunity__c</referenceTo>
    <relationshipLabel>Abu Dhabi Contract Checklists</relationshipLabel>
    <relationshipName>Abu_Dhabi_Contract_Checklists</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>