wier/force-app/main/default/objects/Abu_Dhabi_Contract_Checklist__c/fields/Require_Changes__c.field-meta.xml
<CustomField>
    <fullName>Require_Changes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Require Changes</label>
    <type>Checkbox</type>
</CustomField>