wier/force-app/main/default/objects/Abu_Dhabi_Contract_Checklist__c/fields/Submit_for_Contract_Manager_Approval__c.field-meta.xml
<CustomField>
    <fullName>Submit_for_Contract_Manager_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submit for Contract Manager Approval</label>
    <type>Checkbox</type>
</CustomField>