wier/force-app/main/default/objects/Abu_Dhabi_Contract_Checklist__c/fields/Tendering_Rep_Email__c.field-meta.xml
<CustomField>
    <fullName>Tendering_Rep_Email__c</fullName>
    <label>Tendering Rep Email</label>
    <type>Email</type>
</CustomField>