wier/force-app/main/default/objects/Abu_Dhabi_Contract_Checklist__c/fields/Whether_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Whether_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Whether Applicable</label>
    <type>Checkbox</type>
</CustomField>